bin/testsuite/tests/compiler/src/errors/compiler593.swg
#global testerror "Err0433"
func(op: string) toto() {}

#test
{
    toto()
}
